--- a/src/templates/MemeEditor/MemeEditor.html
+++ b/src/templates/MemeEditor/MemeEditor.html
@@ -1,4 +1,5 @@
-<div id="meme-viewer">
+<div id="meme-editor">
+  <div id="meme-viewer">
     <svg
       viewBox="0 0 1200 828"
       version="1.1"
@@ -24,7 +25,7 @@
       </text>
     </svg>
   </div>
-  <div id="meme-editor">
+  <div id="meme-form">
     <form>
       <h2>Edition</h2>
       <label for="meme_titre">titre</label>
@@ -77,9 +78,7 @@
         </div>
         <div>
           <label>italic</label>
-          <label
-            ><input type="radio" name="italic" value="true" />oui</label
-          >
+          <label><input type="radio" name="italic" value="true" />oui</label>
           <label
             ><input
               type="radio"
@@ -97,3 +96,4 @@
       </div>
     </form>
   </div>
+</div>
