--- a/src/templates/MemeEditor/MemeEditor.html
+++ b/src/templates/MemeEditor/MemeEditor.html
@@ -26,7 +26,7 @@
     </svg>
   </div>
   <div id="meme-form">
-    <form>
+    <form name="meme">
       <h2>Edition</h2>
       <label for="meme_titre">titre</label>
       <input type="text" name="titre" id="meme_titre" />
